added navbar and navbrand

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
 <body>
 
     <!--Navbar-->
+    <nav class="navbar navbar-light bg-light">
+        <span class="navbar-brand mb-0 h1">YourHoliday</span>
+    </nav>
 
     <!--SearchForm-->
 
+
     <!--Map-->
 
+
     <!--Footer-->
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
