--- a/index.html
+++ b/index.html
@@ -17,14 +17,36 @@
         <span class="navbar-brand mb-0 h1">YourHoliday</span>
     </nav>
 
-    <!--SearchForm-->
+    <!--SearchForm & Map-->
+    <section>
+        <div class="row">
+            <!--SearchForm-->
+            <div>
+                <form>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Country</label>
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">City</label>
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        
+                    </div>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+            <!--Map-->
+            <div>
 
-
-    <!--Map-->
-
+            </div>
+        </div>
+    </section>
 
     <!--Footer-->
+    <footer>
 
+    </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
