--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section>
         <div class="row">
             <!--SearchForm-->
-            <div>
+            <div class="col-12 col-md-6">
                 <form>
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Country</label>
@@ -37,7 +37,7 @@
                 </form>
             </div>
             <!--Map-->
-            <div>
+            <div class="col-12 col-md-6">
 
             </div>
         </div>
