--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!--Navbar-->
     <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">YourHoliday</span>
+        <span class="navbar-brand mx-auto mb-0 h1">YourHoliday</span>
     </nav>
 
     <!--SearchForm & Map-->
