--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf1g3CIlrfg1zN2_JkFW-irBMkhXxg2zc&callback=initMap"></script>
 <script src="assets/js/maps.js" type="text/javascript"></script>
 </body>
 </html>
