--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 </form>
             </div>
             <!--Map-->
-            <div class="col-12 col-md-8">
-
+            <div id="map" class="col-12 col-md-8">
+                
             </div>
         </div>
     </section>
