removed placeholder title for a custom one

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" type="text/css">
 <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-<title>Title</title>
+<title>YourHoliday | Plan Your Dream Holiday</title>
 </head>
 <body>
 
@@ -38,7 +38,6 @@
             </div>
             <!--Map-->
             <div id="map" class="col-12 col-md-8">
-                
             </div>
         </div>
     </section>
