--- a/index.html
+++ b/index.html
@@ -24,13 +24,7 @@
             <div class="col-12 col-md-4">
                 <form>
                     <div class="form-group">
-                        <label for="exampleFormControlInput1">Country</label>
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="exampleFormControlTextarea1">City</label>
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Enter Destination (city, region or country)" aria-label="Search">
                         
                     </div>
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
