changed google maps api script tag

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbToOn1N_lPuh83bdnG4X9GXn09WCHPlc&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places?key=AIzaSyCbToOn1N_lPuh83bdnG4X9GXn09WCHPlc"></script>
 <script src="assets/js/maps.js" type="text/javascript"></script>
-<script src="https://maps.googleapis.com/maps/api/place/findplacefromtext/output?key=AIzaSyCbToOn1N_lPuh83bdnG4X9GXn09WCHPlc"></script>
 </body>
 </html>
