--- a/index.html
+++ b/index.html
@@ -19,20 +19,44 @@
 
     <!--SearchForm & Map-->
     <section>
-        <div class="row">
-            <!--SearchForm-->
-            <div class="col-12 col-md-4">
-                <form>
-                    <div class="form-group">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Enter Destination (city, region or country)" aria-label="Search">
-                        
-                    </div>
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+        <div class="pac-card" id="pac-card">
+            <div>
+                <div id="title">Autocomplete search</div>
+                <div id="type-selector" class="pac-controls">
+                    <input
+                        type="radio"
+                        name="type"
+                        id="changetype-all"
+                        checked="checked"
+                    />
+                    <label for="changetype-all">All</label>
+
+                    <input type="radio" name="type" id="changetype-establishment" />
+                    <label for="changetype-establishment">Establishments</label>
+
+                    <input type="radio" name="type" id="changetype-address" />
+                    <label for="changetype-address">Addresses</label>
+
+                    <input type="radio" name="type" id="changetype-geocode" />
+                    <label for="changetype-geocode">Geocodes</label>
+                </div>
+                <br />
+                <div id="strict-bounds-selector" class="pac-controls">
+                    <input type="checkbox" id="use-location-bias" value="" checked />
+                    <label for="use-location-bias">Bias to map viewport</label>
+
+                    <input type="checkbox" id="use-strict-bounds" value="" />
+                    <label for="use-strict-bounds">Strict bounds</label>
+                </div>
             </div>
-            <!--Map-->
-            <div id="map" class="col-12 col-md-8">
+            <div id="pac-container">
+                <input id="pac-input" type="text" placeholder="Enter a location" />
             </div>
+        </div>
+        <div id="map"></div>
+        <div id="infowindow-content">
+            <span id="place-name" class="title"></span><br />
+            <span id="place-address"></span>
         </div>
     </section>
 
@@ -43,7 +67,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbToOn1N_lPuh83bdnG4X9GXn09WCHPlc&libraries=places"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbToOn1N_lPuh83bdnG4X9GXn09WCHPlc&callback=initMap&libraries=places&v=weekly"></script>
 <script src="assets/js/maps.js" type="text/javascript"></script>
 </body>
 </html>
