changed place type of radio button from establishment to tourist_attraction

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     />
                     <label for="changetype-all">All</label>
 
-                    <input type="radio" name="type" id="changetype-establishment" />
-                    <label for="changetype-establishment">Establishments</label>
+                    <input type="radio" name="type" id="changetype-tourist_attraction" />
+                    <label for="changetype-tourist_attraction">Tourist Attraction</label>
 
                     <input type="radio" name="type" id="changetype-address" />
                     <label for="changetype-address">Addresses</label>
