commented out dropdown menu for countries to try

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <div id="controls">
-        <select id="country">
+        <!--<select id="country">
           <option value="all">All</option>
           <option value="au">Australia</option>
           <option value="br">Brazil</option>
@@ -43,7 +43,7 @@
           <option value="us" selected>U.S.A.</option>
           <option value="uk">United Kingdom</option>
         </select>
-      </div>
+      </div> -->
     </div>
         <div id="map"></div>
         <div id="infowindow-content">
