--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
     <!--SearchForm & Map-->
     <section>
         <div class="hotel-search">
-      <div id="locationField">
-        <input id="autocomplete" placeholder="Enter a city" type="text" />
-      </div>
+        <div id="locationField">
+            <input id="autocomplete" placeholder="Enter a city" type="text"/>
+        </div>
 
-      <div id="controls">
-        <!--<select id="country">
-          <option value="all">All</option>
-          <option value="au">Australia</option>
-          <option value="br">Brazil</option>
-          <option value="ca">Canada</option>
-          <option value="fr">France</option>
-          <option value="de">Germany</option>
-          <option value="mx">Mexico</option>
-          <option value="nz">New Zealand</option>
-          <option value="it">Italy</option>
-          <option value="za">South Africa</option>
-          <option value="es">Spain</option>
-          <option value="pt">Portugal</option>
-          <option value="us" selected>U.S.A.</option>
-          <option value="uk">United Kingdom</option>
-        </select>
-      </div> -->
-    </div>
+        <div id="controls">
+            <select id="country">
+                <option value="all">All</option>
+                <option value="au">Australia</option>
+                <option value="br">Brazil</option>
+                <option value="ca">Canada</option>
+                <option value="fr">France</option>
+                <option value="de">Germany</option>
+                <option value="mx">Mexico</option>
+                <option value="nz">New Zealand</option>
+                <option value="it">Italy</option>
+                <option value="za">South Africa</option>
+                <option value="es">Spain</option>
+                <option value="pt">Portugal</option>
+                <option value="us" selected>U.S.A.</option>
+                <option value="uk">United Kingdom</option>
+            </select>
+        </div> 
+        </div>
         <div id="map"></div>
         <div id="infowindow-content">
-            <span id="place-name" class="title"></span><br />
+            <span id="place-name" class="title"></span><br/>
             <span id="place-address"></span>
         </div>
     </section>
