added missing div container with id 'listing'

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
         </div> 
         </div>
         <div id="map"></div>
-        <div id="infowindow-content">
-            <span id="place-name" class="title"></span><br/>
-            <span id="place-address"></span>
+        <div id="listing">
+            <table id="resultsTable">
+                <tbody id="results"></tbody>
+            </table>
         </div>
         <div style="display: none">
             <div id="info-content">
